[package]
name = "warp_like_express"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
neon = { version = "0.10.0", default-features = false, features = ["napi-6", "channel-api"] }
warp = "0.2"
parking_lot = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
json = "0.12.4"
lazy_static = "1.4.0"
uuid = {version = "0.8", features = ["serde","v4"]}